# Multi-Chain-NFT-Marketplace

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: ci-cd.yml
apps/api/: .env.example  .eslintrc.json  package.json  schema.gql  tsconfig.build.json  tsconfig.json
apps/api/prisma/: schema.prisma  seed.ts
apps/api/src/: app.module.ts  main.ts
apps/web/: next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/bridge/: page.tsx
apps/web/app/collections/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/listings/: page.tsx
apps/web/components/: analytics-banner.tsx  bridge-request-form.tsx  bundle-composer.tsx  list-token-form.tsx  listing-actions.tsx  navigation.tsx  providers.tsx  request-fraud-score-button.tsx  request-valuation-button.tsx
apps/web/styles/: globals.css
apps/web/types/: global.d.ts
contracts/evm/: README.md  deployments.txt  foundry.toml
contracts/evm/script/: ConfigureTrustedRemote.s.sol  DeployCrossChainNFT.s.sol  DeployLocal.s.sol  DeployMarketplace.s.sol  DeployWormholeBridge.s.sol
contracts/evm/src/: BundleComposer.sol  CrossChainNFT.sol  Marketplace.sol  WormholeBridgeAdapter.sol
contracts/evm/test/: CrossChainNFT.t.sol  Marketplace.t.sol
docs/: auction-jobs.md
infra/: api.Dockerfile  web.Dockerfile
infra/k8s/: api.yaml  namespace.yaml
services/ai/: Dockerfile  pyproject.toml  requirements.txt
services/ai/src/: main.py
(+87 files in other folders)
