[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-service"
version = "0.1.0"
description = "AI microservice for NFT valuation, similarity, and fraud scoring."
authors = [{ name = "XChain Team" }]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.27.1",
  "pydantic>=2.6.0",
  "numpy>=1.26.3",
  "pandas>=2.2.0",
  "scikit-learn>=1.4.0",
  "xgboost>=2.0.3",
  "sentence-transformers>=2.3.1"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.2.2", "mypy>=1.8.0"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]
ignore = ["E203", "E501"]
